# romhack-compiler

./: .gitignore  .travis.yml  CNAME  Cargo.toml  LICENSE  README.md  appveyor.yml  tww-gz.html
.cargo/: config
.github/workflows/: s3-sync.yml  wasm-build-and-push.yml  wasm-build-check.yml
backend/: Cargo.toml
backend/src/: assembler.rs  banner.rs  config.rs  demangle.rs  dol.rs  file_source.rs  framework_map.rs  key_val_print.rs  lib.rs  linker.rs
backend/src/iso/: io_ext.rs  mod.rs  reader.rs  virtual_file_system.rs  writer.rs
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: main.rs  opt.rs
ui/: Cargo.toml
ui/src/: main.rs
wasm/: .gitignore  BUILD.md  Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
wasm/static/: fetch-github-releases.js  index.html  main_worker.js  romhack_prelude.js  run.js  run_prelude.js  style.css  worker.js
wii-crypto/: Cargo.toml
wii-crypto/src/: array_stream.rs  lib.rs  transform.rs  wii_disc.rs
