[package]
name = "wii-crypto"
version = "0.1.1"
authors = ["kipcode66 <egamer1010@gmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
byteorder = "1.4"
lazy_static = "1.4"
block-modes = "0.8"
aes = "0.7"
rayon = "1.5"
failure = "0.1"
sha1 = "0.6"
const_format = "0.2"
futures = { version = "0.3" }
async-std = "1.9"
async-trait = "0.1"
async-recursion = "0.3"